fix mobile menu not readable on link hover

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,14 +39,16 @@
   font-size: smaller;
 }
 
-/* bulma has-text-grey-lighter equivalent */
 a {
   color: $grey-lighter;
 }
 
-/* bulma has-text-white-ter equivalent */
 a:hover {
   color: $white-ter;
+}
+
+a.navbar-item:hover {
+  background-color: $grey-dark;
 }
 
 .is-word-break-all {
